--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html ng-app="SampleApp">
+<html ng-app="HiremonkApp">
   <head lang="en">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Angular-Gulp-Browserify-Starter</title>
+    <title>Hiremonk</title>
     <!-- styles -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
     <link rel="stylesheet" href="bower_components/fontawesome/css/font-awesome.css"/>
@@ -16,15 +16,12 @@
   </head>
   <body>
     <div class="container">
-      <h1>Angular-Gulp-Browserify-Starter</h1>
+      <h1>Hiremonk</h1>
       <!-- views -->
       <div ng-view></div>
     </div>
     <!-- scripts -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="./scripts/bundled.js"></script>
   </body>
