updated basic routes

--- a/app/index.html
+++ b/app/index.html
@@ -16,8 +16,8 @@
   </head>
   <body>
     <div class="container">
-      <h1>Hiremonk</h1>
       <!-- views -->
+      Hello world
       <div ng-view></div>
     </div>
     <!-- scripts -->
